--- a/src/Calendar.css
+++ b/src/Calendar.css
@@ -27,10 +27,14 @@
     color: #ffaa00;
 }
 
-.date-checkbox-container {
-    align-items: center;
-    
-    color: white;
+.checkbox-container {
+    border: 1px white solid;
+    width: 70%;
+    max-width: 330px;
+    margin: auto;
+    margin-top: 20px;
+    padding: 5%;
+    margin-bottom: 100px;
 }
 
 .rdp {
@@ -58,4 +62,10 @@
     font-weight: bold;
     text-underline-offset: 5px;
     text-decoration: underline;
+}
+
+#save-btn {
+    background-color: #ffaa00;
+    color: black;
+    margin-top: 20px;
 }
